gcc/testsuite/gm2/pim/pass/highbit.mod
MODULE highbit ;

FROM libc IMPORT printf ;

TYPE
   set = BITSET ;

CONST
   HighBit = MAX (set) ;

BEGIN
   printf ("the MAX (set) = %d\n", HighBit)
END highbit.
